# cxx-qt-experiments

./: .gitattributes  .gitignore  .rustfmt.toml  Cargo.toml  README.md  flake.nix
.github/workflows/: main.yml
src/bezier_curve/: Cargo.toml  README.md  build.rs
src/bezier_curve/cpp/: bezier_curve.cpp  bezier_curve.h
src/bezier_curve/qml/: main.qml
src/bezier_curve/src/: bezier_curve.rs  main.rs
src/gizmo/: Cargo.toml  README.md  build.rs
src/gizmo/cpp/: cxxqtlib1_qquickitem.h  gizmo.cpp  gizmo.h
src/gizmo/qml/: main.qml
src/gizmo/src/: gizmo.rs  main.rs
src/qt_transform_gizmo/: Cargo.toml  build.rs
src/qt_transform_gizmo/qml/: main.qml
src/qt_transform_gizmo/src/: main.rs  transform_gizmo.rs
