# SPDX-FileCopyrightText: Olivier Le Doeuff <olivier.ldff@gmail.com>
# SPDX-License-Identifier: MIT

[workspace]
resolver = "2"
members = ["src/bezier_curve", "src/gizmo"]

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "Experiments"
authors = ["Olivier Le Doeuff <olivier.ldff@gmail.com>"]

[workspace.dependencies]
cxx = "1.0.95"
cxx-qt = "0.7"
cxx-qt-lib = "0.7"
cxx-qt-build = "0.7"
transform-gizmo = "0.6"
glam = "0.30"
mint = "0.5"
