# SPDX-FileCopyrightText: Olivier Le Doeuff <olivier.ldff@gmail.com>
# SPDX-License-Identifier: MIT

[workspace]
resolver = "2"
members = ["src/bezier_curve", "src/gizmo"]

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "Experiments"
authors = ["Olivier Le Doeuff <olivier.ldff@gmail.com>"]

[workspace.dependencies]
cxx = "1.0.95"
cxx-qt = { git = "https://github.com/KDAB/cxx-qt.git" }
cxx-qt-lib = { git = "https://github.com/KDAB/cxx-qt.git" }
cxx-qt-build = { git = "https://github.com/KDAB/cxx-qt.git" }
transform-gizmo = "0.6"
glam = "0.30"
mint = "0.5"
itertools = "0.14"
